// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ValueButton /> should handle click event 1`] = `
<ValueButton
  classes={
    {
      "active": "tss-9cghc6-ValueButton-active",
      "inactive": "tss-105ceck-ValueButton-inactive",
    }
  }
  id="someid"
  isActive={false}
  label="somelabel"
  onClick={
    [MockFunction] {
      "calls": [
        [],
      ],
      "results": [
        {
          "type": "return",
          "value": undefined,
        },
      ],
    }
  }
/>
`;

exports[`<ValueButton /> should render as active 1`] = `
<ValueButton
  classes={
    {
      "active": "tss-9cghc6-ValueButton-active",
      "inactive": "tss-105ceck-ValueButton-inactive",
    }
  }
  id="someid"
  isActive={true}
  label="somelabel"
  onClick={[Function]}
/>
`;

exports[`<ValueButton /> should render as inactive 1`] = `
<ValueButton
  classes={
    {
      "active": "tss-9cghc6-ValueButton-active",
      "inactive": "tss-105ceck-ValueButton-inactive",
    }
  }
  id="someid"
  isActive={false}
  label="somelabel"
  onClick={[Function]}
/>
`;
